--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,19 @@
+:root {
+  --text-color: rgb(28, 136, 179);
+  --bg-color: rgb(245, 248, 250);
+  --header-bg-color: rgb(255, 255, 255);
+}
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 500;
+  color: var(--text-color);
+  background: var(--bg-color);
 }
