--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
   --bg-color: rgb(245, 248, 250);
   --header-bg-color: rgb(255, 255, 255);
   --dark-color: rgb(29, 29, 29);
+  --header-height: 8.52359208523592vh;
 }
 
 * {
